2004-06-08  n1xt3r  <n1xt3r@bluefalcon>

	* ChangeLog, docs/nanoblogger.html:
	Updated "Installation" section of manual.

	* ChangeLog, nb: - (load_config): USR_DATADIR overrides NB_DATA_DIR.
	- Added new --datadir option that specifies different data directory to use.

	* plugins/archive/monthly/monthly-cal.sh, plugins/entry/entry_catlinks.sh, plugins/archive/master_index.sh, plugins/blog_links.sh, plugins/blog_status.sh, plugins/calendar.sh, plugins/list_entries.sh, plugins/rss.sh, default/templates/entry_links.htm, default/templates/month_links.htm, plugins/atom.sh, nb, ChangeLog:
	- New variable NB_DATA_DIR, provides a more flexible data path.
	- Set NB_DATA_DIR to BLOG_DIR/ARCHIVES by default.
	- FILE_BY_DIR replaced by MONTHLY_DIR.
	- Set MONTHLY_DIR to ARCHIVES/monthly.
	- Updated plugins and templates to work with the new variables.

2004-06-07  n1xt3r  <n1xt3r@bluefalcon>

	* ChangeLog, docs/nanoblogger.html:
	Updated "Settings and Configuration" and "Credits" sections of manual.

	* default/archives.html, default/archives/2004-01-18T17_12_12.htm, default/archives/cat_1.html, default/archives/monthly/2004-01.html, default/atom.xml, default/blog.conf, default/index.html, default/index.xml, default/parts/2004-01.htm, default/parts/archive_links.htm, default/parts/blog_status.htm, default/parts/cal.htm, default/parts/cat_1.htm, default/parts/cat_links.htm, default/parts/fortune.htm, default/parts/news.htm, default/parts/older_entries.htm, default/templates/archive.htm, default/templates/atom.xml, default/templates/category_archive.htm, default/templates/entry.htm, default/templates/main_index.htm, default/templates/main_links.htm, default/templates/makepage.htm, default/templates/month_archive.htm, default/templates/permalink.htm, default/templates/rdf.xml, ChangeLog:
	- Added new variable BLOG_URL_MAIN, for "main" link in templates.
	- Added new variable PERMALINKS, toggles display of permalinks.